--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi[standard] (>=0.116.1,<0.117.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "redis (>=7.0.1,<8.0.0)"
+    "redis (>=7.0.1,<8.0.0)",
+    "celery (>=5.5.3,<6.0.0)"
 ]
 
 
