--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "redis (>=7.0.1,<8.0.0)",
-    "celery (>=5.5.3,<6.0.0)"
+    "celery (>=5.5.3,<6.0.0)",
+    "kafka-python (>=2.2.16,<3.0.0)"
 ]
 
 
