--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,16 @@ dependencies = [
     "aiosqlite (>=0.21.0,<0.22.0)",
     "redis (>=7.0.1,<8.0.0)",
     "celery (>=5.5.3,<6.0.0)",
-    "kafka-python (>=2.2.16,<3.0.0)"
+    "kafka-python (>=2.2.16,<3.0.0)",
+    "pytest (>=9.0.1,<10.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+pythonpath = ["."]
+[tool.poetry.group.dev.dependencies]
+pytest-mock = "^3.15.1"
+
