Replace placeholder test command with Pytest

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Instalar dependências com Poetry
         run: poetry install --no-interaction --no-root
 
-      - name: Rodar testes (placeholder)
-        run: echo "Nenhum teste configurado ainda."
+      - name: Rodar testes com Pytest
+        run: poetry run pytest
