add docker into ci cd process

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,29 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  fastapi-tests:
+  fastapi-docker-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout do código
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Instalar Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-
-      - name: Instalar Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Instalar dependências com Poetry
-        run: poetry install --no-interaction --no-root
-
-      - name: Rodar testes com Pytest
-        env:
-          DATABASE_URL: "sqlite:///:memory:"
-          MEU_USUARIO: "admin"
-          MINHA_SENHA: "admin123"
-        run: poetry run pytest
+      - name: Build da imagem Docker
+        run: docker build -t my-fastapi-app .
