Adicionar configuração do Elasticsearch e Logstash, incluindo logs de aplicação

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "redis (>=7.0.1,<8.0.0)",
     "celery (>=5.5.3,<6.0.0)",
     "kafka-python (>=2.2.16,<3.0.0)",
-    "pytest (>=9.0.1,<10.0.0)"
+    "pytest (>=9.0.1,<10.0.0)",
+    "elasticsearch (>=9.3.0,<10.0.0)"
 ]
 
 
